--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
   },
   "homepage": "https://github.com/cmubeenali/AcuMS#readme",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
+    "mysql": "^2.16.0",
     "node": "^10.6.0",
+    "parseurl": "^1.3.2",
     "vue": "^2.5.16",
     "vue-router": "^3.0.1",
     "vue-server-renderer": "^2.5.16",
