--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "mysql": "^2.16.0",
     "node": "^10.6.0",
     "parseurl": "^1.3.2",
+    "sweetalert2": "^7.25.6",
+    "toastr": "^2.1.4",
     "vue": "^2.5.16",
     "vue-router": "^3.0.1",
     "vue-server-renderer": "^2.5.16",
